--- a/views/nickname.njk
+++ b/views/nickname.njk
@@ -23,8 +23,8 @@
 		<div class="nickname-form">
 			<form action="" name="nickname-form" id="nickname-form">
 				<div class="input-wrap">
-					<label for="room-code" hidden>Nickname</label>
-					<input type="number" name="nickname" id="nickname">
+					<label for="nickname" hidden>Nickname</label>
+					<input type="text" name="nickname" id="nickname">
 				</div>
 			</form>
 		</div>
