--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -13,6 +13,7 @@
 
 <body>
 	{% block body %}{% endblock %}
+	<form hidden></form>
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
 
@@ -48,5 +49,5 @@
 
 	{% block postScript %}{% endblock %}
 </body>
-
+<form hidden></form>
 </html>
