--- a/views/waiting-room.njk
+++ b/views/waiting-room.njk
@@ -13,7 +13,7 @@
 		<div class="game-title no-outline">
 			<!-- in the case of the pink box, this would be class="outline" -->
             <div id="code" class="box-gray">
-      			<p>Code: <span id="room-num">123 456</span></p>
+      			<h2>Code: <span class="room-num">123 456</span></h2>
     		</div>
 			<!-- during a round the h1 would be a prompt, so content might be "TFOML" -->
 			<!-- otherwise it may be "round 3 scores", "player 4 wins", "final scores" -->
