:sparkles: Add Prompt Page

--- a/public/main.css
+++ b/public/main.css
@@ -27,6 +27,7 @@
     position:absolute;
     top:100vh; right: 0;
     transform:translateY(-100%);
+    z-index: 10;
 }
 
 .debug-nav {
@@ -107,40 +108,6 @@ main {
     position: relative;
 }
 
-.box-gray {
-    background-color: var(--gray-bg-color, LightGrey);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    text-align: center;
-}
-
-.box-gray * {
-    margin: 0;
-    text-align: center;
-}
-
-#instructions {
-    max-width: 49.375rem;
-}
-
-#instructions>p {
-    font-size: 2.75rem;
-    line-height: 2;
-}
-
-#code,
-#prompt {
-    /* min-width: 40rem; */
-    max-width: 60rem;
-}
-
-#code>p {
-    font-size: 4.5rem;
-    font-weight: bold;
-}
-
 button {
     max-width: 20rem;
     /*! height: 5rem; */
@@ -165,6 +132,74 @@ button:focus {
 
 button:focus {
     outline: 5px solid var(--thunk-pink, pink);
+}
+
+/* Applies a gray background to the element */
+.box-gray {
+    background-color: var(--gray-bg-color, LightGrey);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    text-align: center;
+}
+
+.box-gray * {
+    margin: 0;
+    text-align: center;
+}
+
+.switch-up p {
+    text-align: center;
+    font-weight: bold;
+    font-size: 3rem;
+    margin: 2rem 0;
+}
+
+.room-code-display {
+    position:absolute;
+    top:100vh; right: 0;
+    transform:translateY(-100%);
+    font-size: 1.5rem;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+}
+
+.round-progress-bar {
+    width: 80vw;
+    max-width: 60rem;
+    height: 3rem;
+    padding: 0;
+    margin-top: 3em;
+}
+
+.timer-bar {
+    height: 100%;
+    width: 100%;
+    background-color: var(--thunk-pink, pink);
+}
+
+/* ! Code from alpha static ------------------------------------ */
+
+#instructions {
+    max-width: 49.375rem;
+}
+
+#instructions>p {
+    font-size: 2.75rem;
+    line-height: 2;
+}
+
+#code,
+#prompt {
+    /* min-width: 40rem; */
+    max-width: 60rem;
+}
+
+#code>p {
+    font-size: 4.5rem;
+    font-weight: bold;
 }
 
 #connected-players {
@@ -252,16 +287,6 @@ button:focus {
     font-size: 2rem;
 }
 
-#code-fixed {
-    position: absolute;
-    right: .5rem;
-    bottom: .5rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-}
-
 #prompt-instructions>h3,
 #switch-up>h3 {
     font-size: 3rem;
@@ -274,21 +299,6 @@ button:focus {
 #switch-up>p,
 #prompt>p {
     font-size: 1.5rem;
-}
-
-#timer {
-    width: 80%;
-    max-width: 60rem;
-    height: 3rem;
-    position: absolute;
-    bottom: .5rem;
-    padding: 0;
-}
-
-#timer-bar {
-    height: 100%;
-    width: 100%;
-    background-color: var(--thunk-pink, pink);
 }
 
 #resp-grid {
