--- a/views/partials/debug-nav.njk
+++ b/views/partials/debug-nav.njk
@@ -1,5 +1,5 @@
 {# Creates an array of all views on the screen we need for debugging. Any time a new view is made, add it to this array. #}
-{% set views=['index', 'join', 'nickname', 'host-instructions', 'waiting-room', 'standby'] %}
+{% set views=['index', 'join', 'nickname', 'host-instructions', 'waiting-room', 'standby', 'prompt'] %}
 <div class="debug-nav-container">
 	<div class="debug-nav">
 		<select id="views-list" name="viewsList">
