--- a/views/standby.njk
+++ b/views/standby.njk
@@ -15,9 +15,7 @@
 		<div class="closed-captions">
 			<!-- narration captions -->
 		</div>
-		<div class="room-code-display">
-			<!-- room code that persists in btm right during a round -->
-		</div>
+		{% include "partials/room-code-display.njk" %}
 	</section>
 </main>
 {% endblock %}
