--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,7 @@
+/*  How to import all CSS files:  */
+/* @import url("imports/**.css"); */
+@import url("imports/debug-nav.css");
+
 * {
     margin: 0;
     padding: 0;
@@ -21,29 +25,6 @@
     --pl-lime: #DAEB70;
     --pl-violet: #6F4FED;
     --thunk-pink: #ED1968;
-}
-
-.debug-nav-container {
-    position:absolute;
-    top:100vh; left: 0;
-    transform:translateY(-100%);
-    z-index: 10;
-}
-
-.debug-nav {
-    display: none;
-}
-
-.debug-nav .submit-button {
-    font-size: 1.5rem;
-    margin: 0 1rem;
-    padding: 1rem 1.5rem;
-}
-
-.debug-nav-container .plus-button {
-    font-size: 1.5rem;
-    margin: 0;
-    padding: 1rem 1.5rem;
 }
 
 html {
