--- a/views/partials/round-progress-bar.njk
+++ b/views/partials/round-progress-bar.njk
@@ -1,3 +1,3 @@
-		<div class="round-progress-bar box-gray">
-			<span class="timer-bar"></span>
-		</div>
+<div class="round-progress-bar">
+		<span class="timer-bar"></span>
+</div>
