--- a/views/index.njk
+++ b/views/index.njk
@@ -3,7 +3,12 @@
 
 {% block body %}
 <div role="banner" class="banner">
+	<img src="public/imports/banner.png"/>
 	<!-- flowy background -->
+</div>
+<div role="footer" class="footer">
+	<img src="public/imports/banner.png"/>
+	<!-- footer flowy background -->
 </div>
 <main>
 	<header class="title">
