💄Added CSS Sheets & Example HTML Page
CSS for Buttons and Timer linked and ready for Imports.

Joining Screen Layout as an HTML is ready to be tweaked/changed if needed.

--- a/public/main.css
+++ b/public/main.css
@@ -4,6 +4,8 @@
 @import url("imports/background.css");
 @import url("imports/banner.css");
 @import url("imports/footer.css");
+@import url("imports/buttons.css");
+@import url("imports/timers.css");
 
 * {
     margin: 0;
