--- a/views/standby.njk
+++ b/views/standby.njk
@@ -13,6 +13,8 @@
 	<section role="status" class="system-status">
 		<!-- non-interactive system feedback -->
 		<div class="closed-captions">
+		<h3>Hey, it’s your boy, Bill.  Welcome to Thunk! 
+		 I’m MC and this is where my subtitles will be.  </h3>
 			<!-- narration captions -->
 		</div>
 		{% include "partials/room-code-display.njk" %}
