:sparkles: Add test narration caption text

--- a/views/standby.njk
+++ b/views/standby.njk
@@ -13,7 +13,7 @@
 	<section role="status" class="system-status">
 		<!-- non-interactive system feedback -->
 		<div class="closed-captions">
-			<!-- narration captions -->
+			<p>Test narration closed captioning that will appear on the bottom of the screen.</p>
 		</div>
 		{% include "partials/room-code-display.njk" %}
 	</section>
