--- a/public/main.css
+++ b/public/main.css
@@ -134,6 +134,24 @@ button:focus {
     text-align: center;
 } */
 
+.system-status {
+    width: 100%;
+}
+
+.closed-captions {
+    background-color: var(--gray-bg-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    text-align: center;
+    position: absolute;
+    top: 100vh; left: 50vw;
+    transform: translateY(-100%) translateX(-50%);
+    margin: 0 auto;
+    max-width: 60%;
+}
+
 .prompt {
     background-color: var(--gray-bg-color);
     display: flex;
