--- a/views/prompt.njk
+++ b/views/prompt.njk
@@ -12,7 +12,7 @@
 						</div>
 						<div class="prompt outline">
 								<!-- in the case of the pink box, this would be class="outline" -->
-								<h1 class="prompt-text">Pumkins are classified as a fruit.</h1>
+								<h1 class="prompt-text">Pumpkins are classified as a fruit.</h1>
 								<!-- during a round the h1 would be a prompt, so content might be "TFOML" -->
 								<!-- otherwise it may be "round 3 scores", "player 4 wins", "final scores" -->
 						</div>
