--- a/public/main.css
+++ b/public/main.css
@@ -383,7 +383,7 @@ input[type=submit]:hover, input[type=submit]:active, input[type=submit]:focus {
     background-color: var(--pl-green);
 }
 
-.player-answer {
+.player-answer, .hightlighted-player .player-name {
     background-color: var(--gray-bg-color);
     display: flex;
     align-items: center;
