--- a/public/main.css
+++ b/public/main.css
@@ -120,7 +120,7 @@ button:focus {
 }
 
 /* Applies a gray background to the element */
-.box-gray {
+.closed-captions, .prompt, .switch-up-text, .room-code-display, .player-answer, .hightlighted-player .player-name {
     background-color: var(--gray-bg-color);
     display: flex;
     align-items: center;
@@ -128,46 +128,17 @@ button:focus {
     padding: 1rem;
     text-align: center;
 }
-
-/* .box-gray * {
-    margin: 0;
-    text-align: center;
-} */
 
 .system-status {
     width: 100%;
 }
 
 .closed-captions {
-    background-color: var(--gray-bg-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    text-align: center;
     position: absolute;
     top: 100vh; left: 50vw;
     transform: translateY(-100%) translateX(-50%);
     margin: 0 auto;
     max-width: 60%;
-}
-
-.prompt {
-    background-color: var(--gray-bg-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    text-align: center;
-}
-
-.switch-up-text {
-    background-color: var(--gray-bg-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    text-align: center;
 }
 
 .switch-up p {
@@ -237,7 +208,6 @@ button:focus {
     display: flex;
     align-items: center;
     justify-content: center;
-    /*! height: 2rem; */
     font-size: 1.5em;
     text-align: center;
     padding: .5em;
@@ -384,12 +354,6 @@ input[type=submit]:hover, input[type=submit]:active, input[type=submit]:focus {
 }
 
 .player-answer, .hightlighted-player .player-name {
-    background-color: var(--gray-bg-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    text-align: center;
     font-weight: bold;
     font-size: 3em;
     margin-top: 1rem;
