--- a/public/main.css
+++ b/public/main.css
@@ -359,6 +359,65 @@ input[type=submit]:hover, input[type=submit]:active, input[type=submit]:focus {
     margin-top: 1rem;
 }
 
+.score-standings {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    list-style: none;
+    counter-reset: thunk-counter;
+    width: 40rem;
+    margin: 2rem auto 0;
+    grid-gap: 1rem;
+}
+
+.score-standings>li {
+    counter-increment: thunk-counter;
+    position: relative;
+    margin-left: 1.5rem;
+}
+
+.score-standings>li::before {
+    content: counter(thunk-counter);
+    color: #fff;
+    font-size: 1.25rem;
+    font-weight: bold;
+    position: absolute;
+    --counter-size: 1.75rem;
+    left: calc(-1 * var(--counter-size) + .5rem);
+    line-height: var(--counter-size);
+    width: var(--counter-size);
+    height: var(--counter-size);
+    top: calc(50% - var(--counter-size)/2);
+    background: var(--dark-gray);
+    border-radius: 50%;
+    text-align: center;
+}
+
+.score-standings .player {
+    display: grid;
+    grid-template-columns: 5.25rem auto;
+    grid-template-rows: 2.25rem auto;
+    grid-template-areas:
+        "pl-avi pl-name"
+        "pl-avi pl-score";
+    width: 16rem;
+    grid-gap: 0.5rem;
+    align-items: unset;
+}
+
+.score-standings .pl-avi {
+    grid-area: pl-avi;
+    margin-bottom: 0;
+}
+
+.score-standings .pl-name {
+    margin-top: .5rem;
+    font-size: 1.5rem;
+}
+
+.score-standings .pl-score {
+    font-size: 1.25rem;
+}
+
 @media screen and (max-width: 40rem) {
     main {
         padding: 2rem;
