--- a/views/partials/debug-nav.njk
+++ b/views/partials/debug-nav.njk
@@ -1,6 +1,6 @@
 {# Creates an array of all views on the screen we need for debugging. Any time a new view is made, add it to this array. #}
 {% set views=['index', 'join', 'nickname', 'host-instructions', 'waiting-room', 'standby', 'prompt',
-	'pl-prompt', 'voting', 'pl-response-selector', 'pl-voting', 'round-winner', 'game-winner', 'round-standings', 'final-standings', 'credits', 'pl-start-standby', 'pl-standby', 'pl-round-instructions', 'pl-response'] %}
+	'pl-prompt', 'voting', 'pl-response-selector', 'pl-voting', 'round-winner', 'game-winner', 'round-standings', 'final-standings', 'credits', 'pl-start-standby', 'pl-standby', 'pl-round-instructions', 'pl-response', 'pl-round-standings', 'pl-final-standings'] %}
 <div class="debug-nav-container">
 		<button class="plus-button" onclick="toggleDebugNav()">+</button>
 		<div class="debug-nav">
