:lipstick: Banner and Footer
Banner and Footer styling on every page

--- a/views/standby.njk
+++ b/views/standby.njk
@@ -2,7 +2,12 @@
 
 {% block body %}
 <div role="banner" class="banner">
+	<img src="http://localhost:3000/static/imports/banner-01.png"/>
 	<!-- flowy background -->
+</div>
+<div role="footer" class="footer">
+	<img src="http://localhost:3000/static/imports/banner-01.png"/>
+	<!-- footer flowy background -->
 </div>
 <main>
 	<section class="cta">
