--- a/public/imports/footer.css
+++ b/public/imports/footer.css
@@ -1,7 +1,11 @@
 .footer{
     position: absolute;
-    bottom: 0px;
+    bottom: -45px;
     width: 100%;
 
 transform: rotate(180deg);
+}
+
+.footer img {
+    width: 100%;
 }
