--- a/views/index.njk
+++ b/views/index.njk
@@ -3,11 +3,11 @@
 
 {% block body %}
 <div role="banner" class="banner">
-	<img src="public/imports/banner.png"/>
+	<img src="http://localhost:3000/static/imports/banner-01.png"/>
 	<!-- flowy background -->
 </div>
 <div role="footer" class="footer">
-	<img src="public/imports/banner.png"/>
+	<img src="http://localhost:3000/static/imports/banner-01.png"/>
 	<!-- footer flowy background -->
 </div>
 <main>
