:lipstick: Pl-View Components
Specifically - Brandmark, Join Form, Round Title & Round Instructions

--- a/public/imports/buttons.css
+++ b/public/imports/buttons.css
@@ -54,7 +54,7 @@ position: absolute;
 margin-left: 49px;
 margin-top: 8px;
         text-decoration: none;
-        font-family: McLaren;
+        font-family: 'Mclaren', cursive;
 font-style: normal;
 font-weight: normal;
 font-size: 18px;
