--- a/public/main.css
+++ b/public/main.css
@@ -9,6 +9,8 @@
 @import url("imports/system-status.css");
 @import url("imports/hosting-instructions.css");
 @import url("imports/closed-captions.css");
+@import url("imports/pl-round-instructions.css");
+@import url("imports/join.css");
 
 * {
     margin: 0;
@@ -411,7 +413,7 @@ ol>li::before {
     width: var(--counter-size);
     height: var(--counter-size);
     top: calc(50% - var(--counter-size)/2);
-    background: var(--dark-gray);
+    background: rgba(237, 29, 105, 0.3);;
     border-radius: 50%;
     text-align: center;
 }
