--- a/views/join.njk
+++ b/views/join.njk
@@ -14,6 +14,9 @@
 		<!-- current page title or system prompt/feedback -->
 		<div class="brand-mark">
 			<!-- for use on landing and room join -->
+					<svg width="134" height="134" viewBox="0 0 134 134" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path fill-rule="evenodd" clip-rule="evenodd" d="M67 134C104.003 134 134 104.003 134 67C134 29.9969 104.003 0 67 0C29.9969 0 0 29.9969 0 67C0 104.003 29.9969 134 67 134ZM56.5388 25.482H74.1326V56.1047H82.5016V70.37H74.1326L74.1326 56.1048H74.0375V56.1047H56.5388V25.482ZM56.5388 56.1047H51.4033V70.37H56.5388H74.0375V56.1048H56.5388V56.1047ZM56.5388 70.3701H74.1326V93.8603H82.5967V108.126H73.7522C64.242 108.126 56.5388 101.849 56.5388 94.1456V70.3701Z" fill="#ED1B69"/>
+					</svg>
 		</div>
 		<div class="game-title no-outline">
 			<!-- in the case of the pink box, this would be class="outline" -->
