:lipstick: Pl-View Components 2
Quick fix for an H1 element gone wrong

--- a/public/imports/join.css
+++ b/public/imports/join.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=McLaren&display=swap');
 
-h1 { 
+.welcome { 
 position: absolute;
 top: 200px;
 left: 75px;
