--- a/views/join.njk
+++ b/views/join.njk
@@ -20,7 +20,7 @@
 		</div>
 		<div class="game-title no-outline">
 			<!-- in the case of the pink box, this would be class="outline" -->
-			<h1>Welcome</h1>
+			<h1 class="welcome">Welcome</h1>
 			<span class="subtitle">Please enter a room code</span>
 			<!-- during a round the h1 would be a prompt, so content might be "TFOML" -->
 			<!-- otherwise it may be "round 3 scores", "player 4 wins", "final scores" -->
