--- a/public/imports/buttons.css
+++ b/public/imports/buttons.css
@@ -1,49 +1,49 @@
 /* filled button styles */
-.buttonstyle {
+button {
     position: relative;
 
 /* Change position of button */
 margin-left: auto;
 margin-right: auto;
-margin-top: 25px;
+margin-top: 1.6em;
 /* Change position of button */
 
 cursor: pointer;
-width: 199px;
-height: 42px;
+width: 12.5em;
+height: 2.6em;
 background: #ED1B69;
-border-radius: 67px;
+border-radius: 4.2em;
 }
 
-.buttonstyle:hover {
+button:hover {
 background: linear-gradient(180deg, #FF006B 0%, #FF006B 0.01%, rgba(79, 0, 33, 0.970644) 122.63%);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+box-shadow: 0em .25em .25em rgba(0, 0, 0, 0.25);
 }
 
-.buttonstyle:active{
+button:active{
 background: linear-gradient(180deg, #FF006B 0%, #FF006B 0.01%, rgba(79, 0, 33, 0.970644) 122.63%);
-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
+box-shadow: 0em 0em 0em rgba(0, 0, 0, 0.25);
 }
 
-.buttonstyle:focus{
+button:focus{
 background: linear-gradient(180deg, #FF006B 0%, #FF006B 0.01%, rgba(79, 0, 33, 0.970644) 122.63%);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+box-shadow: 0px .25em .25em rgba(0, 0, 0, 0.25);
 }
 
 /* unfilled button style */
-.unfilled_buttonstyle{
+.inactive_button{
 position: relative;
 
 /* Change position of button */
 margin-left: auto;
 margin-right: auto;
-margin-top: 25px;
+margin-top: 1.6em;
 /* Change position of button */
 
-border: 3px solid #A65875;
-border-radius: 67px;
-width: 199px;
-height: 42px;
+border: .2em solid #A65875;
+border-radius: 4.2em;
+width: 12.5em;
+height: 2.6em;
 cursor: default;
 }
 
@@ -51,14 +51,14 @@ cursor: default;
 
 .buttontext {
 position: absolute;
-margin-left: 49px;
-margin-top: 8px;
+margin-left: 3em;
+margin-top: .5em;
         text-decoration: none;
         font-family: 'Mclaren', cursive;
 font-style: normal;
 font-weight: normal;
-font-size: 18px;
-line-height: 26px;
+font-size: 1.125em;
+line-height: 1.625em;
 text-align: center;
 color: #ffffff;
 }
