--- a/public/imports/master-prompt-instructions.css
+++ b/public/imports/master-prompt-instructions.css
@@ -1,17 +1,16 @@
 /* Layout for Master Prompt Instructions */
 
 .instructionheader{
-    font-family: Avenir Next;
+    font-family: Avenir LT Std, 'Lato', sans-serif;
 font-style: normal;
 font-weight: bold;
-font-size: 48px;
-line-height: 124.99%;
+font-size: 3em;
+line-height: 125%;
 text-align: center;
-/* identical to box height, or 60px */
 position: relative;
 margin-left: auto;
 margin-right: auto;
-top: 188px;
+top: 11.75em;
 
 color: #ED1B69;
 
@@ -21,14 +20,13 @@ color: #ED1B69;
     margin-left: auto;
 margin-right: auto;
 text-align: center;
-    top: 200px;
+    top: 12.5em;
     position: relative;
 font-family: McLaren;
 font-style: normal;
 font-weight: normal;
-font-size: 36px;
-line-height: 131.26%;
-/* or 47px */
+font-size: 2.25em;
+line-height: 2.9em;
 
 
 color: #E6E6E6;
@@ -41,23 +39,23 @@ color: #E6E6E6;
 clip-path: polygon(0 0, 100% 14%, 94% 100%, 9% 100%);
 margin-left: auto;
 margin-right: auto;
-margin-top: 300px;
+margin-top: 18.75em;
 
 background: #ED1D69;
-border-radius: 25px 88px 93px 120px;
-height: 272.25px;
-width: 755.51px;
+border-radius: 1.56em 5.5em 5.81em 7.5em;
+height: 17em;
+width: 47em;
 z-index: 20;
 }
 
 p.prompttext1{
-    font-family: Avenir Next, 'Lato', sans-serif;
+    font-family: Avenir LT Std, 'Lato', sans-serif;
     font-style: normal;
 font-weight: bold;
-font-size: 64px;
-line-height: 124.99%;
-/* or 80px */
-padding-top:100px;
+font-size: 4em;
+line-height: 125%;
+/* or 5em */
+padding-top: 6.25em;
 
 text-align: center;
 
@@ -67,24 +65,24 @@ z-index: 30;
 
 .butbox{
     position: relative;
-    width: 137px;
-    height: 52px;
+    width: 8.56em;
+    height: 3.25em;
     margin-left: auto;
 margin-right: auto;
-margin-top: -825px;
+margin-top: -3.23em;
 background: #82287E;
-border-radius: 11px;
+border-radius: .69em;
 z-index: 20;
 }
 
 p.buttext{
-    font-family: Avenir Next;
+    font-family: Avenir LT Std, 'Lato', sans-serif;
 font-style: normal;
 font-weight: bold;
-font-size: 24px;
-line-height: 124.99%;
-/* or 30px */
-padding-top:12px;
+font-size: 1.5em;
+line-height: 125%;
+/* or 1.875em */
+padding-top: .75em;
 text-align: center;
 
 color: #FFFFFF;
@@ -96,23 +94,22 @@ z-index: 30;
 clip-path: polygon(0 0, 100% 14%, 94% 100%, 9% 100%);
 margin-left: auto;
 margin-right: auto;
-margin-top: 25px;
+margin-top: 1.56em;
 transform: scaleX(-1);
 background: #ED1D69;
-border-radius: 25px 50px 75px 86px;
-height: 183.77px;
-width: 477.58px;
+border-radius: 1.563em 3.125em 4.69em 5.375em;
+height: 11.49em;
+width: 29.85em;
 z-index: 20;
 }
 
 p.prompttext2{
-    font-family: Avenir Next, 'Lato', sans-serif;
+    font-family: Avenir LT Std, 'Lato', sans-serif;
     font-style: normal;
 font-weight: bold;
-font-size: 36px;
-line-height: 124.99%;
-/* or 80px */
-padding-top:35px;
+font-size: 2.25em;
+line-height: 5em;
+padding-top: 2.2em;
 transform: scaleX(-1);
 text-align: center;
 
@@ -124,10 +121,10 @@ z-index: 30;
     -webkit-clip-path: polygon(0 0, 100% 0, 61% 100%, 44% 100%);
 clip-path: polygon(0 0, 100% 0, 61% 100%, 44% 100%);
 background: rgba(196, 196, 196, 0.6);
-width: 46px;
-height: 898px;
+width: 2.875em;
+height: 56.125em;
 margin-left: auto;
 margin-right: auto;
-margin-top: -50px;
+margin-top: -3.125em;
 z-index: 10;
 }
