--- a/public/imports/mobile-response-buttons.css
+++ b/public/imports/mobile-response-buttons.css
@@ -1,31 +1,30 @@
 .responsebutton {
-    margin:14px;
+    margin: .875em;
     background-color:rgba(255, 255, 255, 0);
-    border: 2px solid #A65875;
+    border: .125em solid #A65875;
 box-sizing: border-box;
-border-radius: 12px;
+border-radius: .75em;
     overflow:auto;
     float:left;
-    width: 317px;
-    height: 70px;
+    width: 19.8em;
+    height: 4.375em;
     overflow: hidden;
 }
 
 .responsebutton label {
-    width: 317px;
-    height: 70px;
+    width: 19.8em;
+    height: 4.375em;
 }
 
 .responsebutton label span {
     text-align:center;
-    padding-top: 22px;
+    padding-top: 1.375em;
     display:block;
     font-family: McLaren;
 font-style: normal;
 font-weight: normal;
-font-size: 18px;
-line-height: 124.99%;
-/* or 22px */
+font-size: 1.125em;
+line-height: 1.375em;
 height: 100%;
 transition: ease-in-out .25s;
 color: #F2F2F2;
@@ -33,7 +32,7 @@ color: #F2F2F2;
 
 .responsebutton label input {
     position:absolute;
-    top:-45px;
+    top:-2.8em;
 }
 
 .responsebutton input:checked + span {
