--- a/views/index.njk
+++ b/views/index.njk
@@ -26,7 +26,7 @@
 	<section class="primary">
 		<!-- description of main header, or forms/primary interactions -->
 		<h2 class="how-to-play">How to Play</h2>
-		<div class="landing-instructions">
+		<div class="hosting-instructions">
 			<p>Go to <b>thunk.fun</b> on your player device. <br>
 				Enter room code and join the game</p>
 		</div>
